<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/cv_footer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.dmribeiro.pokedex_app.presentation.view.fragments.vatidation.StepsView
                android:id="@+id/sv_steps_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="bottom"
                android:layout_marginTop="16dp"
                android:layout_marginStart="-8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_instruction"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_password_instruction"
                android:textColor="@color/component_text"
                android:layout_marginTop="24dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sv_steps_bar"
                tools:layout_editor_absoluteY="132dp" />

            <TextView
                android:id="@+id/tv_label_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/label_password"
                android:textColor="@color/component_text_medium"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_instruction" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_password"
                style="@style/CourierTextInputLayout"
                app:errorTextAppearance="@style/CourierErrorTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_password"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_new_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_label_confirm_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/text_hint_repeat_new_password"
                android:textColor="@color/component_text_medium"
                android:textSize="13sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_password" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/il_password_confirm"
                style="@style/CourierTextInputLayout"
                app:errorTextAppearance="@style/CourierErrorTextAppearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_label_confirm_password"
                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_password_confirm"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/text_hint_confirm_new_password"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_pass_security"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/il_password_confirm"
                android:layout_marginTop="24dp"
                android:text="@string/label_password_security"
                android:textColor="@color/component_text"
                android:textSize="16sp"
                />

            <ProgressBar
                android:id="@+id/pb_score"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:layout_marginTop="24dp"
                android:max="90"
                android:progressDrawable="@drawable/rounded_progressbar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_pass_security" />

            <TextView
                android:id="@+id/tv_pass_strength"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginEnd="24dp"
                android:background="@drawable/bg_strong_pass"
                android:paddingHorizontal="6dp"
                android:paddingVertical="4dp"
                android:text="@string/label_password_weak"
                android:textColor="@color/component_text"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/tv_pass_security"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.12"
                app:layout_constraintStart_toEndOf="@id/tv_pass_security"
                app:layout_constraintTop_toTopOf="@+id/tv_pass_security" />

            <ImageView
                android:id="@+id/iv_eight_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pb_score"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_check_pass"
                app:tint="@color/gray_border"
                />

            <TextView
                android:id="@+id/tv_eight_character"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/label_eight_char"
                android:textColor="@color/component_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_eight_char"
                app:layout_constraintStart_toEndOf="@id/iv_eight_char"
                app:layout_constraintTop_toBottomOf="@id/iv_eight_char"
                app:layout_constraintTop_toTopOf="@id/iv_eight_char" />

            <ImageView
                android:id="@+id/iv_one_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_eight_char"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_check_pass"
                />

            <TextView
                android:id="@+id/tv_one_number"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/label_one_number"
                android:textColor="@color/component_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_one_number"
                app:layout_constraintStart_toEndOf="@id/iv_one_number"
                app:layout_constraintTop_toBottomOf="@id/iv_one_number"
                app:layout_constraintTop_toTopOf="@id/iv_one_number" />

            <ImageView
                android:id="@+id/iv_one_special_char"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/iv_one_number"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:src="@drawable/ic_check_pass"
                />

            <TextView
                android:id="@+id/tv_one_special_char"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="8dp"
                android:text="@string/label_one_special_char"
                android:textColor="@color/component_text"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_one_special_char"
                app:layout_constraintStart_toEndOf="@id/iv_one_special_char"
                app:layout_constraintTop_toBottomOf="@id/iv_one_special_char"
                app:layout_constraintTop_toTopOf="@id/iv_one_special_char" />



        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_footer"
        style="@style/CourierCardFooter"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_next"
                style="@style/CourierButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="24dp"
                android:text="Confirmar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>